// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkButton /> should render a disabled link button 1`] = `
<Anchor
  href="#"
>
  <span
    className="button neutral disabled"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a simple text 1`] = `
<Anchor
  href="#"
>
  <span
    className="button neutral"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a size large 1`] = `
<Anchor
  href="#"
>
  <span
    className="button large neutral"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a type delete-subtle 1`] = `
<Anchor
  href="#"
>
  <span
    className="button delete-subtle"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with an icon 1`] = `
<Anchor
  href="test"
  icon={
    <FontAwesomeIcon
      type="star"
    />
  }
>
  <span
    className="button primary"
  >
    <span
      className="button-icon"
      key="dba9cca5-4cac-410d-8ab9-74edb023b9ae"
    >
      <FontAwesomeIcon
        type="star"
      />
    </span>
    Link Button with Icon
  </span>
</Anchor>
`;
